# benchmark

./: .gitignore  CLAUDE.md  Dockerfile  README.md  fly.toml  index.html  package-lock.json  package.json  pyproject.toml
auto_research/: codex_cli.py  config.py  deepinfra_cli.py  llm.py  main.py
auto_research/agents/: schemas.py
auto_research/agents/prompts/v0/: happy_path.md  viewport.md
auto_research/browser/: __init__.py  browser_use_runner.py  capture_state.mjs  playwright_runner.py  serve_static.mjs
auto_research/exports/: README.md  export.py
auto_research/exports/agents/: qa-accessibility.md  qa-edge-case.md  qa-error-recovery.md  qa-happy-path.md  qa-security.md  qa-viewport.md
auto_research/exports/prompts/: qa-accessibility.md  qa-edge-case.md  qa-error-recovery.md  qa-reviewer.md  qa-security.md
auto_research/exports/skills/: qa-accessibility.md  qa-edge-case.md  qa-error-recovery.md  qa-happy-path.md  qa-security.md  qa-viewport.md
auto_research/exports/skills/qa-accessibility/: SKILL.md
auto_research/exports/skills/qa-edge-case/: SKILL.md
auto_research/exports/skills/qa-error-recovery/: SKILL.md
auto_research/exports/skills/qa-happy-path/: SKILL.md
auto_research/exports/skills/qa-reviewer/: SKILL.md
auto_research/ground_truth/: bugs.json  matching.py  parser.py
auto_research/optimizer/: gap_analyzer.py  meta_prompt.py  prompt_generator.py
auto_research/runner/: evaluator.py  harness.py  reporter.py
js/: app.js  render.js
talentflow/: BENCHMARK.md  style.css
talentflow/js/: data.js  store.js
(+2 files in other folders)
