[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "benchmark"
version = "0.1.0"
description = "TalentFlow QA Benchmark with browser-use agent support"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
browser-use = [
    "browser-use>=0.12.0",
]

[project.scripts]
auto-research = "auto_research.main:cli"

[tool.setuptools.packages.find]
include = ["auto_research*"]
